Fixed off center newsletter link.

--- a/static/css/includes/footer.less
+++ b/static/css/includes/footer.less
@@ -62,7 +62,9 @@ footer {
         .mailing-list-button {
             .border-radius(25px);
             padding: 10px 40px 10px 40px;
-            margin: 24px 0;
+            margin: auto;
+            margin-top: 24px;
+            margin-bottom: 24px;
             border: 1px solid @color-accent1;
             color: @color-accent1;
             background-color: @color-accent2;
@@ -180,7 +182,6 @@ footer {
             .mailing-list-button {
                 .border-radius(25px);
                 padding: 10px 40px 10px 40px;
-                margin: 24px 0;
                 border: 1px solid @color-accent1;
                 color: @color-accent1;
                 background-color: @color-accent2;
